[package]
name = "rec"
version = "0.1.0-git"
authors = ["Timofey <ouxya@pm.me>", "Ernst Rohlicek <ernst@rohlicek.at>"]
edition = "2021"

# TODO update dependencies!

[dependencies]
regex = "1.4.2"
rand = "0.7.3"
rand_core = "0.5.1"
lazy_static = "1.4.0"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
block-modes = "0.7.0"
aes = "0.6.0"
base64 = "0.13.0"
crc = "1.8.1"
multimap = "0.9.0"